--- a/FRONT/inscription.html
+++ b/FRONT/inscription.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Inscription</h2>
-    <form action="/connexion" method="post">
+    <form action="/inscription" method="post">
         <label for="prenom">Prénom:</label><br>
         <input type="text" id="prenom" name="prenom" required><br>
         <label for="nom">Nom:</label><br>
